[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/battle_hud/stat_delta_popup.gd" id="1"]

[node name="StatDeltaPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = 130.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBox" unique_name_in_owner=true]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Level Up!"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="StatGrid" type="GridContainer" parent="VBox" unique_name_in_owner=true]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="CloseButton" type="Button" parent="VBox" unique_name_in_owner=true]
layout_mode = 2
text = "Close"
